[tool.poetry]
name = "zero-gpt"
version = "0.1.2"
description = ""
authors = ["Rob Bishop <infamousrob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1"
pydantic = "^2"
instructor = "^1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
