[project]
name = "zero-gpt"
version = "0.1.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "instructor>=1.4.3",
    "openai>=1.47.1",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
